@@ -494,7 +494,7 @@ _Description: Port:
 Template: ubiquity/text/finished_label
 Type: text
 _Description:
- Installation has finished.  You can continue testing Ubuntu now, but until
+ Installation has finished.  You can continue testing ${RELEASE} now, but until
  you restart the computer, any changes you make or documents you save will
  not be preserved.
 
