@@ -5,6 +5,8 @@ ubiquity (2.3.8) UNRELEASED; urgency=low
     hide the title bar rather than crash.
   * Don't use "Ethernet" when indicating a user is connected to the network.
     (LP: #615104, #615035)
+  * Make sure finished_label reflects the derivative name rather than
+    hardcoding to "Ubuntu".
 
   [ Colin Watson ]
   * Update d-i/update-control for Dpkg::Deps changes in dpkg 1.15.6.
